// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`External links <GoTerms /> should render GOTerms component with empty subset 1`] = `
<section
  id="go-terms"
>
  <div
    className="row"
  >
    <div
      className="large-12 columns"
    >
      <h4>
        Go terms
      </h4>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="medium-6 large-4 columns"
    >
      <span
        className="Biological Process"
      >
        Biological Process
      </span>
      <AnimatedEntry
        animateSelf={false}
        className="no-bullet"
        delay={0}
        duration={500}
        element="ul"
        itemDelay={25}
        keyframes={
          Object {
            "opacity": Array [
              0,
              1,
            ],
          }
        }
      >
        <li>
          <span
            style={
              Object {
                "fontSize": "0.9rem",
              }
            }
          >
            None
          </span>
        </li>
      </AnimatedEntry>
    </div>
    <div
      className="medium-6 large-4 columns"
    >
      <span
        className="Molecular Function"
      >
        Molecular Function
      </span>
      <AnimatedEntry
        animateSelf={false}
        className="no-bullet"
        delay={0}
        duration={500}
        element="ul"
        itemDelay={25}
        keyframes={
          Object {
            "opacity": Array [
              0,
              1,
            ],
          }
        }
      >
        <li>
          <span
            style={
              Object {
                "fontSize": "0.9rem",
              }
            }
          >
            None
          </span>
        </li>
      </AnimatedEntry>
    </div>
    <div
      className="medium-6 large-4 columns"
    >
      <span
        className="Cellular Component"
      >
        Cellular Component
      </span>
      <AnimatedEntry
        animateSelf={false}
        className="no-bullet"
        delay={0}
        duration={500}
        element="ul"
        itemDelay={25}
        keyframes={
          Object {
            "opacity": Array [
              0,
              1,
            ],
          }
        }
      >
        <li>
          <span
            style={
              Object {
                "fontSize": "0.9rem",
              }
            }
          >
            None
          </span>
        </li>
      </AnimatedEntry>
    </div>
  </div>
</section>
`;

exports[`External links <GoTerms /> should render GoTerms component 1`] = `
<section
  id="go-terms"
>
  <div
    className="row"
  >
    <div
      className="large-12 columns"
    >
      <h4>
        Go terms
      </h4>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="medium-6 large-4 columns"
    >
      <span
        className="Biological Process"
      >
        Biological Process
      </span>
      <AnimatedEntry
        animateSelf={false}
        className="no-bullet"
        delay={0}
        duration={500}
        element="ul"
        itemDelay={25}
        keyframes={
          Object {
            "opacity": Array [
              0,
              1,
            ],
          }
        }
      >
        <li>
          <span
            style={
              Object {
                "fontSize": "0.9rem",
              }
            }
          >
            None
          </span>
        </li>
      </AnimatedEntry>
    </div>
    <div
      className="medium-6 large-4 columns"
    >
      <span
        className="Molecular Function"
      >
        Molecular Function
      </span>
      <AnimatedEntry
        animateSelf={false}
        className="no-bullet"
        delay={0}
        duration={500}
        element="ul"
        itemDelay={25}
        keyframes={
          Object {
            "opacity": Array [
              0,
              1,
            ],
          }
        }
      >
        <li>
          <span
            style={
              Object {
                "fontSize": "0.9rem",
              }
            }
          >
            None
          </span>
        </li>
      </AnimatedEntry>
    </div>
    <div
      className="medium-6 large-4 columns"
    >
      <span
        className="Cellular Component"
      >
        Cellular Component
      </span>
      <AnimatedEntry
        animateSelf={false}
        className="no-bullet"
        delay={0}
        duration={500}
        element="ul"
        itemDelay={25}
        keyframes={
          Object {
            "opacity": Array [
              0,
              1,
            ],
          }
        }
      >
        <li>
          <span
            style={
              Object {
                "fontSize": "0.9rem",
              }
            }
          >
            None
          </span>
        </li>
      </AnimatedEntry>
    </div>
    <div
      className="medium-6 large-4 columns"
    >
      <span
        className="biological_process"
      >
        biological process
      </span>
      <AnimatedEntry
        animateSelf={false}
        className="no-bullet"
        delay={0}
        duration={500}
        element="ul"
        itemDelay={25}
        keyframes={
          Object {
            "opacity": Array [
              0,
              1,
            ],
          }
        }
      >
        <li>
          <GoLink
            className="go-terms"
            id="GO:0004930"
            title="test1 (GO:0004930)"
          >
            test1
          </GoLink>
        </li>
        <li>
          <GoLink
            className="go-terms"
            id="GO:0007186"
            title="test2 (GO:0007186)"
          >
            test2
          </GoLink>
        </li>
        <li>
          <GoLink
            className="go-terms"
            id="GO:0016021"
            title="test3 (GO:0016021)"
          >
            test3
          </GoLink>
        </li>
      </AnimatedEntry>
    </div>
  </div>
</section>
`;
